--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -157,14 +157,16 @@ header{
     display: grid;
     min-height: 100vh;
     max-height: fit-content;
-    grid-template-columns: 5% 1fr 1fr 2fr 5%;
+    grid-template-columns: 9rem 1fr 1fr 2fr 5%;
     grid-template-rows: 68px 1fr 1fr;
 
     h2{
-        grid-row: 2/3;
-       grid-column: 2/4;
+       grid-row: 2/3;
+       grid-column: 2/5;
        align-self: flex-end;
-       padding-left:5rem;
+       justify-self: flex-start;
+       margin-left: 5rem;
+       margin-bottom: 5rem;
     }
 
     
@@ -172,8 +174,11 @@ header{
         grid-row:2/3;
         grid-column: 2/5;
         align-self: flex-end;
+        justify-self: flex-start;
         position: relative;
-        padding-left:12.5rem;
+        left: 29rem;
+        top:-5rem;
+
         .homedot {
             margin: 0 20px 0 0; 
             height: 15px;
@@ -190,19 +195,19 @@ header{
         grid-row: 2/4;
         grid-column: 3/6;
         object-fit: cover;
-        height: 80%;
+        max-height: 100vh;
+        min-height: 75vh;
         align-self: center;
         justify-self: center;
+        margin-top:10rem
     
     }
     p{
         grid-row: 3/4;
-        grid-column: 2/4;
-        z-index:1000;
+        grid-column: 2/5;
         align-self: flex-start;
         justify-self: flex-start;
-        padding-left:8rem;
-        padding-top:3rem
+        margin-left:8rem;
     }
 
 }
