--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -2,22 +2,26 @@
     display: grid;
     min-height: 100vh;
     max-height: fit-content;
-    grid-template-columns: 5% 1fr 1fr 5%;
+    grid-template-columns: 9rem 1fr 1fr 5%;
     grid-template-rows: 68px 1fr 1fr;
 
     h2{
         grid-row: 2/3;
        grid-column: 2/3;
        align-self: flex-end;
-       padding-left:5rem;
+       justify-self: flex-start;
+       margin-left:5rem;
+       margin-bottom: 5rem;
     }
 
     .pike{
         grid-row:2/3;
-        grid-column: 2/5;
+        grid-column: 2/3;
         align-self: flex-end;
+        justify-self: flex-start;
         position: relative;
-        padding-left:14rem;
+        left: 20rem;
+        top:-5rem;
         .homedot {
             margin: 0 20px 0 0; 
             height: 15px;
