--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -2,7 +2,7 @@
     display: grid;
     min-height: 100%;
     max-height: fit-content;
-    grid-template-columns: 5% 1fr 1fr 5%;
+    grid-template-columns: 9rem 1fr 1fr 5%;
     grid-template-rows: 68px 1fr 1fr;
 
     h2{
