--- a/styles/style.scss
+++ b/styles/style.scss
@@ -100,7 +100,7 @@ a{
    }
 }
 
-/*dnevne pikice*/
+/*dnevne in pikice*/
 body.day #fp-nav ul li a span, 
 .fp-slidesNav ul li a span {
     box-shadow: inset 0 0 0 5px #061A33;
