--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -2,7 +2,7 @@
     display: grid;
     min-height: 100%;
     max-height: fit-content;
-    grid-template-columns: 9rem 1fr 1fr 5%;
+    grid-template-columns: 9rem 1.5fr 1fr 5%;
     grid-template-rows: 68px 1fr 1fr;
 
     h2{
@@ -12,6 +12,7 @@
        justify-self: flex-start;
        margin-left: 5rem;
        margin-bottom: 5rem;
+       font-size: 20px;
     }
     p{
         grid-row: 3/4;
@@ -20,6 +21,8 @@
         align-self: flex-start;
         justify-self: flex-start;
         margin-left:8rem;
+        /*za lažje delo*/
+        display:none;
         
         
     }    
@@ -33,6 +36,8 @@
         position: relative;
         left: 38rem;
         top:-5rem;
+        /*za lažje delo*/
+        display:none;
         .homedot {
             margin: 0 20px 0 0; 
             height: 15px;
@@ -40,8 +45,168 @@
             background-color: red;
             border-radius: 50%;
             display: inline-block;
-            z-index: 50;
+            
           }
     
     }
+}
+
+/*kontaktna forma*/
+
+.kontaktcontainer{
+    width: 80%;
+    grid-row:2/4;
+    grid-column:3/4;
+    align-self: center;
+    background-color: #EEFFFF;
+    color: #061A33;
+    padding: 2rem;
+
+    .row100{
+        position: relative;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(autofit, minmax(300px, 1fr));
+
+        .col{
+            position:relative;
+            width: 100%;
+            padding:0 10px;
+            margin: 30px 0 10px;
+            transition: 0.5s;
+
+        }
+
+        .inputBox{
+            position:relative;
+            width: 100%;
+            height: 20px;
+            color: #061A33;
+
+            input{
+                
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background: transparent;
+                box-shadow: none;
+                border:none;
+                outline: none;
+                font-size: 18px;
+                padding: 0 10px;
+                z-index: 5;
+                color:#EEFFFF;
+            }
+
+            textarea{
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background: transparent;
+                box-shadow: none;
+                border:none;
+                outline: none;
+                font-size: 18px;
+                padding: 0 10px;
+                z-index: 1;
+                color:#061A33;   
+            }
+
+
+
+            .text{
+                position: absolute;
+                top:0;
+                left:0;
+                line-height: 40px;
+                font-size: 18px;
+                padding: 0 10px;
+                display: block;
+                transition: 0.5s;
+                pointer-events: none;
+
+            }
+
+            input:focus + .text,
+            input:valid + .text{
+                top: -35px;
+                left: -10px;
+
+            }
+
+            .line{
+                position:absolute;
+                bottom:0;
+                display: block;
+                width:100%;
+                height: 2px;
+                background: #061A33;
+                transition: 0.5s;
+                border-radius: 2px;
+                pointer-events: none;
+            }
+
+            input:focus ~ .line,
+            input:valid ~ .line{
+                height: 100%;
+                
+
+
+            }
+
+            textarea{
+                position:relative;
+                width:100%;
+                height:200px;
+                padding: 10px 0;
+                resize: none;
+
+                textarea{
+                    height:100%;
+                    resize: none;
+                }
+
+            }
+            textarea:focus + .text,
+            textarea:valid + .text{
+                top: -35px;
+                left: -10px;
+
+            }
+
+            textarea:focus ~ .line,
+            textarea:valid ~ .line{
+                height: 100%;
+                
+
+
+            }
+        }
+
+        .textarea{
+            position:relative;
+            width:100%;
+            height:100px;
+            padding: 10px 0;
+            resize: none;
+            textarea{
+                height:100%;
+                resize: none;
+            }
+        } 
+
+    
+    }
+}
+
+input[type="submit"]{
+    border: none;
+    padding: 7px 35px;
+    cursor: pointer;
+    outline: none;
+    background:#FF4D5A;
+    font-size: 18px;
+    border-radius: 2rem;
+
+
 }
