--- a/styles/style.css
+++ b/styles/style.css
@@ -586,8 +586,8 @@ header .menu-btn.open .menu-btn__burger::after {
   max-height: -webkit-fit-content;
   max-height: -moz-fit-content;
   max-height: fit-content;
-  -ms-grid-columns: 9rem 1fr 1fr 5%;
-      grid-template-columns: 9rem 1fr 1fr 5%;
+  -ms-grid-columns: 9rem 1.5fr 1fr 5%;
+      grid-template-columns: 9rem 1.5fr 1fr 5%;
   -ms-grid-rows: 68px 1fr 1fr;
       grid-template-rows: 68px 1fr 1fr;
 }
@@ -604,6 +604,7 @@ header .menu-btn.open .menu-btn__burger::after {
   justify-self: flex-start;
   margin-left: 5rem;
   margin-bottom: 5rem;
+  font-size: 20px;
 }
 
 .kontakt p {
@@ -620,6 +621,8 @@ header .menu-btn.open .menu-btn__burger::after {
       align-self: flex-start;
   justify-self: flex-start;
   margin-left: 8rem;
+  /*za lažje delo*/
+  display: none;
 }
 
 .kontakt .pike {
@@ -635,6 +638,8 @@ header .menu-btn.open .menu-btn__burger::after {
   position: relative;
   left: 38rem;
   top: -5rem;
+  /*za lažje delo*/
+  display: none;
 }
 
 .kontakt .pike .homedot {
@@ -644,6 +649,161 @@ header .menu-btn.open .menu-btn__burger::after {
   background-color: red;
   border-radius: 50%;
   display: inline-block;
-  z-index: 50;
+}
+
+/*kontaktna forma*/
+.kontaktcontainer {
+  width: 80%;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2/4;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  background-color: #EEFFFF;
+  color: #061A33;
+  padding: 2rem;
+}
+
+.kontaktcontainer .row100 {
+  position: relative;
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(300px, 1fr))[autofit];
+      grid-template-columns: repeat(autofit, minmax(300px, 1fr));
+}
+
+.kontaktcontainer .row100 .col {
+  position: relative;
+  width: 100%;
+  padding: 0 10px;
+  margin: 30px 0 10px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.kontaktcontainer .row100 .inputBox {
+  position: relative;
+  width: 100%;
+  height: 20px;
+  color: #061A33;
+}
+
+.kontaktcontainer .row100 .inputBox input {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  padding: 0 10px;
+  z-index: 5;
+  color: #EEFFFF;
+}
+
+.kontaktcontainer .row100 .inputBox textarea {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  padding: 0 10px;
+  z-index: 1;
+  color: #061A33;
+}
+
+.kontaktcontainer .row100 .inputBox .text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  line-height: 40px;
+  font-size: 18px;
+  padding: 0 10px;
+  display: block;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.kontaktcontainer .row100 .inputBox input:focus + .text,
+.kontaktcontainer .row100 .inputBox input:valid + .text {
+  top: -35px;
+  left: -10px;
+}
+
+.kontaktcontainer .row100 .inputBox .line {
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #061A33;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border-radius: 2px;
+  pointer-events: none;
+}
+
+.kontaktcontainer .row100 .inputBox input:focus ~ .line,
+.kontaktcontainer .row100 .inputBox input:valid ~ .line {
+  height: 100%;
+}
+
+.kontaktcontainer .row100 .inputBox textarea {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  padding: 10px 0;
+  resize: none;
+}
+
+.kontaktcontainer .row100 .inputBox textarea textarea {
+  height: 100%;
+  resize: none;
+}
+
+.kontaktcontainer .row100 .inputBox textarea:focus + .text,
+.kontaktcontainer .row100 .inputBox textarea:valid + .text {
+  top: -35px;
+  left: -10px;
+}
+
+.kontaktcontainer .row100 .inputBox textarea:focus ~ .line,
+.kontaktcontainer .row100 .inputBox textarea:valid ~ .line {
+  height: 100%;
+}
+
+.kontaktcontainer .row100 .textarea {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  padding: 10px 0;
+  resize: none;
+}
+
+.kontaktcontainer .row100 .textarea textarea {
+  height: 100%;
+  resize: none;
+}
+
+input[type="submit"] {
+  border: none;
+  padding: 7px 35px;
+  cursor: pointer;
+  outline: none;
+  background: #FF4D5A;
+  font-size: 18px;
+  border-radius: 2rem;
 }
 /*# sourceMappingURL=style.css.map */
