--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -53,6 +53,7 @@
 
 /*kontaktna forma*/
 
+
 .kontaktcontainer{
     width: 80%;
     grid-row:2/4;
@@ -109,7 +110,7 @@
                 font-size: 18px;
                 padding: 0 10px;
                 z-index: 1;
-                color:#061A33;   
+                color:#EEFFFF;   
             }
 
 
@@ -187,7 +188,7 @@
             position:relative;
             width:100%;
             height:100px;
-            padding: 10px 0;
+            padding: 0px 0;
             resize: none;
             textarea{
                 height:100%;
