--- a/styles/style.scss
+++ b/styles/style.scss
@@ -30,6 +30,14 @@ body.day .label{
   background-color: #061A33;
 }
 
+body.day .sidebar{
+  background-color: #EEFFFF;
+}
+
+body.day .sidebarMenu a{
+  color: #061A33;
+}
+
 
 h1{
   font-family: 'Russo One', sans-serif;
