--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,8 @@ body {
   color: #EEFFFF;
   background-color: #061A33;
   font-family: 'Titillium Web', sans-serif;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 /*vse za dnevno temo*/
@@ -39,6 +41,15 @@ body.day .sidebar {
 
 body.day .sidebarMenu a {
   color: #061A33;
+}
+
+/*nočni burger*/
+body.day .menu-btn__burger, .menu-btn__burger::before {
+  background: #061A33;
+}
+
+body.day .menu-btn__burger::before, body.day .menu-btn__burger::after {
+  background: #061A33;
 }
 
 h1 {
@@ -155,7 +166,6 @@ header {
   width: 100%;
   background-color: transparent;
   /* BURGER MENI V ZGORNJI VRSTICI */
-  /*nočna barva menija*/
   /* ANIMACIJA */
 }
 
