--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -63,6 +63,13 @@
     color: #061A33;
     padding: 2rem;
 
+    h2{
+        width: 100%;
+        text-align: center;
+        margin-bottom: 10px;
+
+    }
+
     .row100{
         position: relative;
         width: 100%;
@@ -81,7 +88,7 @@
         .inputBox{
             position:relative;
             width: 100%;
-            height: 20px;
+            height: 50px;
             color: #061A33;
 
             input{
