--- a/styles/style.css
+++ b/styles/style.css
@@ -686,6 +686,12 @@ header .menu-btn.open .menu-btn__burger::after {
   padding: 2rem;
 }
 
+.kontaktcontainer h2 {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 .kontaktcontainer .row100 {
   position: relative;
   width: 100%;
@@ -707,7 +713,7 @@ header .menu-btn.open .menu-btn__burger::after {
 .kontaktcontainer .row100 .inputBox {
   position: relative;
   width: 100%;
-  height: 20px;
+  height: 50px;
   color: #061A33;
 }
 
