--- a/styles/style.css
+++ b/styles/style.css
@@ -622,7 +622,6 @@ header .menu-btn.open .menu-btn__burger::after {
   justify-self: flex-start;
   margin-left: 5rem;
   margin-bottom: 5rem;
-  font-size: 20px;
 }
 
 .kontakt p {
@@ -639,8 +638,6 @@ header .menu-btn.open .menu-btn__burger::after {
       align-self: flex-start;
   justify-self: flex-start;
   margin-left: 8rem;
-  /*za lažje delo*/
-  display: none;
 }
 
 .kontakt .pike {
@@ -656,8 +653,6 @@ header .menu-btn.open .menu-btn__burger::after {
   position: relative;
   left: 38rem;
   top: -5rem;
-  /*za lažje delo*/
-  display: none;
 }
 
 .kontakt .pike .homedot {
@@ -671,7 +666,6 @@ header .menu-btn.open .menu-btn__burger::after {
 
 /*kontaktna forma*/
 .kontaktcontainer {
-  width: 80%;
   -ms-grid-row: 2;
   -ms-grid-row-span: 2;
   grid-row: 2/4;
@@ -681,15 +675,10 @@ header .menu-btn.open .menu-btn__burger::after {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  background-color: #EEFFFF;
-  color: #061A33;
-  padding: 2rem;
-}
-
-.kontaktcontainer h2 {
-  width: 100%;
-  text-align: center;
-  margin-bottom: 10px;
+  width: 80%;
+  padding: 20px;
+  background: #061A33;
+  border: 4px solid #EEFFFF;
 }
 
 .kontaktcontainer .row100 {
@@ -713,8 +702,8 @@ header .menu-btn.open .menu-btn__burger::after {
 .kontaktcontainer .row100 .inputBox {
   position: relative;
   width: 100%;
-  height: 50px;
-  color: #061A33;
+  height: 40px;
+  color: #EEFFFF;
 }
 
 .kontaktcontainer .row100 .inputBox input {
@@ -728,8 +717,8 @@ header .menu-btn.open .menu-btn__burger::after {
   outline: none;
   font-size: 18px;
   padding: 0 10px;
-  z-index: 5;
-  color: #EEFFFF;
+  z-index: 1;
+  color: #061A33;
 }
 
 .kontaktcontainer .row100 .inputBox textarea {
@@ -744,7 +733,7 @@ header .menu-btn.open .menu-btn__burger::after {
   font-size: 18px;
   padding: 0 10px;
   z-index: 1;
-  color: #EEFFFF;
+  color: #061A33;
 }
 
 .kontaktcontainer .row100 .inputBox .text {
@@ -760,7 +749,11 @@ header .menu-btn.open .menu-btn__burger::after {
   pointer-events: none;
 }
 
-.kontaktcontainer .row100 .inputBox input:focus + .text,
+.kontaktcontainer .row100 .inputBox input:focus + .text {
+  top: -35px;
+  left: -10px;
+}
+
 .kontaktcontainer .row100 .inputBox input:valid + .text {
   top: -35px;
   left: -10px;
@@ -772,38 +765,35 @@ header .menu-btn.open .menu-btn__burger::after {
   display: block;
   width: 100%;
   height: 2px;
-  background: #061A33;
+  background: #EEFFFF;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border-radius: 2px;
   pointer-events: none;
 }
 
-.kontaktcontainer .row100 .inputBox input:focus ~ .line,
+.kontaktcontainer .row100 .inputBox input:focus ~ .line {
+  height: 100%;
+}
+
 .kontaktcontainer .row100 .inputBox input:valid ~ .line {
   height: 100%;
 }
 
-.kontaktcontainer .row100 .inputBox textarea {
-  position: relative;
-  width: 100%;
-  height: 200px;
-  padding: 10px 0;
-  resize: none;
+.kontaktcontainer .row100 .inputBox textarea:focus + .text {
+  top: -35px;
+  left: -10px;
 }
 
-.kontaktcontainer .row100 .inputBox textarea textarea {
-  height: 100%;
-  resize: none;
-}
-
-.kontaktcontainer .row100 .inputBox textarea:focus + .text,
 .kontaktcontainer .row100 .inputBox textarea:valid + .text {
   top: -35px;
   left: -10px;
 }
 
-.kontaktcontainer .row100 .inputBox textarea:focus ~ .line,
+.kontaktcontainer .row100 .inputBox textarea:focus ~ .line {
+  height: 100%;
+}
+
 .kontaktcontainer .row100 .inputBox textarea:valid ~ .line {
   height: 100%;
 }
@@ -812,7 +802,7 @@ header .menu-btn.open .menu-btn__burger::after {
   position: relative;
   width: 100%;
   height: 100px;
-  padding: 0px 0;
+  padding: 10px 0;
   resize: none;
 }
 
