--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,7 +7,7 @@ html{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  top:0;
+  
 }
 
 body {
@@ -78,7 +78,7 @@ a{
 }
 
 
-
+/*črta*/
 .verticalLine{
   display:box;
   border-left: 3pt solid #FF4D5A;
