--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -59,7 +59,7 @@
     grid-column: 3/4;
     align-self: center;
     width: 80%;
-    padding: 20px;
+    padding: 2rem;
     background:#061A33;
     border: 4px solid #EEFFFF;
 
@@ -73,8 +73,8 @@
         .col{
             position:relative;
             width: 100%;
-            padding: 0 10px;
-            margin: 30px 0 10px;
+            padding: 0 2rem;
+            margin: 3rem 0 1rem;
             transition: 0.5s;
         }
 
@@ -118,7 +118,20 @@
                 top: 0;
                 left:0;
                 line-height:40px;
-                font-size: 18px;
+                font-size: 2rem;
+                padding: 0px 10px;
+                display:block;
+                transition: 0.5s;
+                pointer-events: none;
+
+            }
+
+            .sporocilo{
+                position:absolute;
+                top: 6rem;
+                left:0;
+                line-height:40px;
+                font-size: 2rem;
                 padding: 0px 10px;
                 display:block;
                 transition: 0.5s;
@@ -200,11 +213,12 @@
 
 input[type="submit"]{
     border: none;
+    font-family: 'Russo One', sans-serif;
     padding: 7px 35px;
     cursor: pointer;
     outline: none;
     background:#FF4D5A;
-    font-size: 18px;
+    font-size: 2rem;
     border-radius: 2rem;
 
 
