--- a/styles/style.css
+++ b/styles/style.css
@@ -42,12 +42,34 @@ body.day .sidebarMenu a {
   color: #061A33;
 }
 
-/*nočni burger*/
+/*dnevni burger*/
 body.day .menu-btn__burger, .menu-btn__burger::before {
   background: #061A33;
 }
 
 body.day .menu-btn__burger::before, body.day .menu-btn__burger::after {
+  background: #061A33;
+}
+
+/*dnevna kontaktna forma*/
+body.day .kontaktcontainer {
+  background: #EEFFFF;
+  border: 4px solid #061A33;
+}
+
+body.day .kontaktcontainer .inputBox {
+  color: #061A33;
+}
+
+body.day .kontaktcontainer .inputBox input {
+  color: #EEFFFF;
+}
+
+body.day .kontaktcontainer .inputBox textarea {
+  color: #EEFFFF;
+}
+
+body.day .kontaktcontainer .inputBox .line {
   background: #061A33;
 }
 
@@ -72,6 +94,10 @@ p {
 li {
   font-family: 'Russo One', sans-serif;
   font-size: 20pt;
+}
+
+input, textarea {
+  font-family: 'Titillium Web', sans-serif;
 }
 
 a {
@@ -676,7 +702,7 @@ header .menu-btn.open .menu-btn__burger::after {
       -ms-grid-row-align: center;
       align-self: center;
   width: 80%;
-  padding: 20px;
+  padding: 2rem;
   background: #061A33;
   border: 4px solid #EEFFFF;
 }
@@ -693,8 +719,8 @@ header .menu-btn.open .menu-btn__burger::after {
 .kontaktcontainer .row100 .col {
   position: relative;
   width: 100%;
-  padding: 0 10px;
-  margin: 30px 0 10px;
+  padding: 0 2rem;
+  margin: 3rem 0 1rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -741,7 +767,20 @@ header .menu-btn.open .menu-btn__burger::after {
   top: 0;
   left: 0;
   line-height: 40px;
-  font-size: 18px;
+  font-size: 2rem;
+  padding: 0px 10px;
+  display: block;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.kontaktcontainer .row100 .inputBox .sporocilo {
+  position: absolute;
+  top: 6rem;
+  left: 0;
+  line-height: 40px;
+  font-size: 2rem;
   padding: 0px 10px;
   display: block;
   -webkit-transition: 0.5s;
@@ -813,11 +852,12 @@ header .menu-btn.open .menu-btn__burger::after {
 
 input[type="submit"] {
   border: none;
+  font-family: 'Russo One', sans-serif;
   padding: 7px 35px;
   cursor: pointer;
   outline: none;
   background: #FF4D5A;
-  font-size: 18px;
+  font-size: 2rem;
   border-radius: 2rem;
 }
 /*# sourceMappingURL=style.css.map */
