--- a/styles/style.scss
+++ b/styles/style.scss
@@ -39,13 +39,32 @@ body.day .sidebarMenu a{
   color: #061A33;
 }
 
-/*nočni burger*/
+/*dnevni burger*/
 body.day .menu-btn__burger, .menu-btn__burger::before{
    background:#061A33;
 }
 
 body.day .menu-btn__burger::before, body.day .menu-btn__burger::after{
   background:#061A33;
+}
+
+/*dnevna kontaktna forma*/
+
+body.day .kontaktcontainer{
+  background: #EEFFFF;
+  border: 4px solid #061A33;
+  .inputBox{
+    color:#061A33;
+    input{
+      color:#EEFFFF;
+    }
+    textarea{
+      color:#EEFFFF;
+    }
+    .line{
+      background:#061A33;
+    }
+  }
 }
 
 h1{
@@ -71,6 +90,9 @@ li{
   font-size: 20pt;
 }
 
+input, textarea{
+  font-family: 'Titillium Web', sans-serif;
+}
 
 a{
   color: #EEFFFF;
