--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -1,36 +1,149 @@
-.pro{
-    display: grid;
-    min-height: 100vh;
-    max-height: fit-content;
-    grid-template-columns: 9rem 1fr 1fr 5%;
-    grid-template-rows: 68px 1fr 1fr;
+.pro {
+  display: grid;
+  min-height: 100vh;
+  max-height: fit-content;
+  grid-template-columns: 9rem 1fr 1fr 5%;
+  grid-template-rows: 68px 1fr 1fr;
 
-    h2{
-        grid-row: 2/3;
-       grid-column: 2/3;
-       align-self: flex-end;
-       justify-self: flex-start;
-       margin-left:5rem;
-       margin-bottom: 5rem;
+  h2 {
+    grid-row: 2/3;
+    grid-column: 2/4;
+    align-self: flex-end;
+    justify-self: flex-start;
+    margin-left: 5rem;
+    margin-bottom: 5rem;
+  }
+
+  .pike {
+    grid-row: 2/3;
+    grid-column: 2/4;
+    align-self: flex-end;
+    justify-self: flex-start;
+    position: relative;
+    left: 20rem;
+    top: -3rem;
+    .homedot {
+      margin: 0 20px 0 0;
+      height: 15px;
+      width: 15px;
+      background-color: red;
+      border-radius: 50%;
+      display: inline-block;
+      z-index: 50;
     }
+  }
 
-    .pike{
-        grid-row:2/3;
-        grid-column: 2/3;
-        align-self: flex-end;
-        justify-self: flex-start;
+  /* SLIDER S PROJEKTI */
+  .container-projekti {
+    grid-row: 2 / span 2;
+    grid-column: 3/4;
+    align-self: center;
+    position: relative;
+    width: 100%;
+    height: 60%;
+    background: transparent;
+    /*background: #061a33;*/
+
+    .projekti-bck,
+    .projekti-fwd {
+      float: left;
+      width: 10%;
+      height: 100%;
+      z-index: 10;
+      /*background-color: #061A33;*/
+
+      a {
         position: relative;
-        left: 20rem;
-        top:-5rem;
-        .homedot {
-            margin: 0 20px 0 0; 
-            height: 15px;
-            width: 15px;
-            background-color: red;
-            border-radius: 50%;
-            display: inline-block;
-            z-index: 50;
-          }
-    
+        top: 45%;
+        transform: translateY(-50%);
+        text-decoration: none;
+        display: inline-block;
+        font-size: 25rem;
+      }
+
+      a:hover {
+        color: #ff4d5a;
+      }
     }
+    .projekti-bck {
+      left: 0;
+    }
+
+    .projekti-img {
+      /* Sredinski div */
+      float: left;
+      position: relative;
+      height: 100%;
+      width: 80%;
+      justify-items: center;
+      align-items: center;
+      z-index: 9;
+      background-color: rgba(235, 235, 235, 0.6);
+      max-width: 1200px;
+
+      
+
+      .proSlide{
+          width: 100%;
+          height: 100%;
+
+          .st-projekta {
+            text-align: center;
+            width: 8rem;
+            height: 9rem;
+            position: absolute;
+            font-size: 7rem;
+            right: 0;
+            bottom: 0;
+          }
+
+          img{
+            height: 100%;
+            width: 100%;
+        }
+      }
+
+      
+    }
+
+    .projekti-fwd {
+      right: 0;
+    }
+  }
+
+  /* OPISI PROJEKTOV */
+
+  .opisi-projektov {
+    grid-row: 3 / 3;
+    grid-column: 2/2;
+    /*background-color: white;*/
+    padding: 4rem 4rem 4rem 4rem;
+    text-align: center;
+    /*color: #061A33; Po koncanem urejanju izbrisi oz dodaj dnevni nacin*/
+
+    h4 {
+      font-size: 5rem;
+    }
+
+    h5 {
+      font-size: 3.5rem;
+    }
+
+    p {
+      font-size: 2.5rem;
+      margin-top: 1rem;
+    }
+
+    .orodja {
+      margin-top: 2rem;
+    }
+
+    .obisci-stran {
+      margin-top: 3rem;
+      color: #eeffff;
+    }
+    .obisci-stran:hover {
+      color: #061a33;
+    }
+  }
 }
