--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ html {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  top: 0;
+  /*top:0; Zakomentiral zaradi pozicioniranja številke na slikah projektov*/
 }
 
 body {
@@ -490,6 +490,8 @@ header .menu-btn.open .menu-btn__burger::after {
       grid-template-columns: 9rem 1fr 1fr 5%;
   -ms-grid-rows: 68px 1fr 1fr;
       grid-template-rows: 68px 1fr 1fr;
+  /* SLIDER S PROJEKTI */
+  /* OPISI PROJEKTOV */
 }
 
 .pro h2 {
@@ -497,8 +499,8 @@ header .menu-btn.open .menu-btn__burger::after {
   -ms-grid-row-span: 1;
   grid-row: 2/3;
   -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
   -ms-flex-item-align: end;
       align-self: flex-end;
   justify-self: flex-start;
@@ -511,14 +513,14 @@ header .menu-btn.open .menu-btn__burger::after {
   -ms-grid-row-span: 1;
   grid-row: 2/3;
   -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
   -ms-flex-item-align: end;
       align-self: flex-end;
   justify-self: flex-start;
   position: relative;
   left: 20rem;
-  top: -5rem;
+  top: -3rem;
 }
 
 .pro .pike .homedot {
@@ -529,6 +531,128 @@ header .menu-btn.open .menu-btn__burger::after {
   border-radius: 50%;
   display: inline-block;
   z-index: 50;
+}
+
+.pro .container-projekti {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2 / span 2;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  position: relative;
+  width: 100%;
+  height: 60%;
+  background: transparent;
+  /*background: #061a33;*/
+}
+
+.pro .container-projekti .projekti-bck,
+.pro .container-projekti .projekti-fwd {
+  float: left;
+  width: 10%;
+  height: 100%;
+  z-index: 10;
+  /*background-color: #061A33;*/
+}
+
+.pro .container-projekti .projekti-bck a,
+.pro .container-projekti .projekti-fwd a {
+  position: relative;
+  top: 45%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25rem;
+}
+
+.pro .container-projekti .projekti-bck a:hover,
+.pro .container-projekti .projekti-fwd a:hover {
+  color: #ff4d5a;
+}
+
+.pro .container-projekti .projekti-bck {
+  left: 0;
+}
+
+.pro .container-projekti .projekti-img {
+  /* Sredinski div */
+  float: left;
+  position: relative;
+  height: 100%;
+  width: 80%;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 9;
+  background-color: rgba(235, 235, 235, 0.6);
+  max-width: 1200px;
+}
+
+.pro .container-projekti .projekti-img .proSlide {
+  width: 100%;
+  height: 100%;
+}
+
+.pro .container-projekti .projekti-img .proSlide .st-projekta {
+  text-align: center;
+  width: 8rem;
+  height: 9rem;
+  position: absolute;
+  font-size: 7rem;
+  right: 0;
+  bottom: 0;
+}
+
+.pro .container-projekti .projekti-img .proSlide img {
+  height: 100%;
+  width: 100%;
+}
+
+.pro .container-projekti .projekti-fwd {
+  right: 0;
+}
+
+.pro .opisi-projektov {
+  -ms-grid-row: 3;
+  grid-row: 3 / 3;
+  -ms-grid-column: 2;
+  grid-column: 2/2;
+  /*background-color: white;*/
+  padding: 4rem 4rem 4rem 4rem;
+  text-align: center;
+  /*color: #061A33; Po koncanem urejanju izbrisi oz dodaj dnevni nacin*/
+}
+
+.pro .opisi-projektov h4 {
+  font-size: 5rem;
+}
+
+.pro .opisi-projektov h5 {
+  font-size: 3.5rem;
+}
+
+.pro .opisi-projektov p {
+  font-size: 2.5rem;
+  margin-top: 1rem;
+}
+
+.pro .opisi-projektov .orodja {
+  margin-top: 2rem;
+}
+
+.pro .opisi-projektov .obisci-stran {
+  margin-top: 3rem;
+  color: #eeffff;
+}
+
+.pro .opisi-projektov .obisci-stran:hover {
+  color: #061a33;
 }
 
 .onas {
