--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,7 +7,7 @@ html{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  top:0;
+  /*top:0; Zakomentiral zaradi pozicioniranja številke na slikah projektov*/ 
 }
 
 body {
