--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -209,8 +209,8 @@ header{
 /* VSEBINA */
 .showcase{
     display: grid;
-    min-height: 100vh;
-    max-height: fit-content;
+    height: 100vh;
+    align-content: stretch;
     grid-template-columns: 9rem 1fr 1fr 2fr 5%;
     grid-template-rows: 68px 1fr 1fr;
 
