--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -1,12 +1,12 @@
 .kontakt{
     display: grid;
-    min-height: 100%;
-    max-height: fit-content;
+    height: 100vh;
+    align-content: stretch;
     grid-template-columns: 9rem 1.5fr 1fr 5%;
     grid-template-rows: 68px 1fr 1fr;
 
     h2{
-        grid-row: 2/3;
+       grid-row: 2/3;
        grid-column: 2/4;
        align-self: flex-end;
        justify-self: flex-start;
@@ -57,8 +57,10 @@
     
     grid-row:2/4;
     grid-column: 3/4;
-    align-self: center;
+    
     width: 80%;
+    margin-left: 10%;
+    align-self: center;
     padding: 2rem;
     background:#061A33;
     border: 4px solid #EEFFFF;
