--- a/styles/style.css
+++ b/styles/style.css
@@ -424,10 +424,9 @@ header .menu-btn.open .menu-btn__burger::after {
 .showcase {
   display: -ms-grid;
   display: grid;
-  min-height: 100vh;
-  max-height: -webkit-fit-content;
-  max-height: -moz-fit-content;
-  max-height: fit-content;
+  height: 100vh;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
   -ms-grid-columns: 9rem 1fr 1fr 2fr 5%;
       grid-template-columns: 9rem 1fr 1fr 2fr 5%;
   -ms-grid-rows: 68px 1fr 1fr;
@@ -560,10 +559,9 @@ header .menu-btn.open .menu-btn__burger::after {
 .onas {
   display: -ms-grid;
   display: grid;
-  min-height: 100%;
-  max-height: -webkit-fit-content;
-  max-height: -moz-fit-content;
-  max-height: fit-content;
+  height: 100vh;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
   -ms-grid-columns: 9rem 2fr 1fr 1fr 5%;
       grid-template-columns: 9rem 2fr 1fr 1fr 5%;
   -ms-grid-rows: 68px 1fr 1fr;
@@ -626,10 +624,9 @@ header .menu-btn.open .menu-btn__burger::after {
 .kontakt {
   display: -ms-grid;
   display: grid;
-  min-height: 100%;
-  max-height: -webkit-fit-content;
-  max-height: -moz-fit-content;
-  max-height: fit-content;
+  height: 100vh;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
   -ms-grid-columns: 9rem 1.5fr 1fr 5%;
       grid-template-columns: 9rem 1.5fr 1fr 5%;
   -ms-grid-rows: 68px 1fr 1fr;
@@ -698,10 +695,11 @@ header .menu-btn.open .menu-btn__burger::after {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
+  width: 80%;
+  margin-left: 10%;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  width: 80%;
   padding: 2rem;
   background: #061A33;
   border: 4px solid #EEFFFF;
