--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -57,10 +57,9 @@
     
     grid-row:2/4;
     grid-column: 3/4;
-    
     width: 80%;
-    margin-left: 10%;
     align-self: center;
+    justify-self: center;
     padding: 2rem;
     background:#061A33;
     border: 4px solid #EEFFFF;
