--- a/styles/style.css
+++ b/styles/style.css
@@ -696,10 +696,11 @@ header .menu-btn.open .menu-btn__burger::after {
   -ms-grid-column-span: 1;
   grid-column: 3/4;
   width: 80%;
-  margin-left: 10%;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
   padding: 2rem;
   background: #061A33;
   border: 4px solid #EEFFFF;
